--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pickleshare==0.7.5
 platformdirs==3.2.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.1
